gcc/testsuite/gdc.test/compilable/ice13403.d
// PERMUTE_ARGS:
// REQUIRED_ARGS: -o-
// EXTRA_FILES: imports/ice13403a.d
import imports.ice13403a;

void main() {}
