gcc/testsuite/gdc.test/fail_compilation/fail4375a.d
// REQUIRED_ARGS: -w
// 4375: Dangling else

void main() {
	if (true)
		if (false)
			assert(3);
    else
        assert(4);
}

